finish side bar, fixed img and content spacing, finish video player

--- a/src/components/CommentsForm/CommentsForm.scss
+++ b/src/components/CommentsForm/CommentsForm.scss
@@ -54,6 +54,7 @@
   }
 
   &__input {
+    color: $primary-brainflix-black;
     padding-left: 0.5rem;
     padding-top: 0.5rem;
     margin-bottom: 1rem;
