--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,6 +30,7 @@
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
     background-color: white;
+    color: $primary-brainflix-black;
     border: 1px solid $secondary-mercury;
     border-radius: 4px;
     margin-right: 1rem;
