--- a/src/components/SuggestionList/SuggestionList.scss
+++ b/src/components/SuggestionList/SuggestionList.scss
@@ -2,9 +2,13 @@
 @use "../../styles/partials/mixins" as *;
 
 .suggestion__list {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
   padding: 0;
   margin: 0 $default-padding;
   @include tablet {
+    width: $tablet-width;
     margin: 0 $double-default-padding;
   }
   @include desktop {
@@ -23,12 +27,15 @@
       padding-bottom: $double-default-padding;
     }
     @include desktop {
-        padding-top: $double-default-padding;
-        padding-bottom: $default-padding;
+      padding-top: $double-default-padding;
+      padding-bottom: $default-padding;
     }
   }
   &__img {
-    max-width: 40%;
+    flex: 1;
+    width: 100%;
+    height: auto;
+    overflow: auto;
     border-radius: 0.25rem;
     @include tablet {
       max-width: 25%;
@@ -38,6 +45,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex: 2;
     padding-left: $default-padding;
   }
   &__title {
